--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,9 +3,15 @@
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Und Gott sprach: \'\"Es werde Licht!\"\' Und es wurde Licht.\"\nGenesis 1:3</string>
-  <string name="help_text">Menü-Knopf für Optionen\n\nKapitelnavigation ist mit dem Trackball, D-pad oder durch Querstreichen mit dem Finger möglich.</string>
+  <string name="help_text">Drücken Sie die Menü-Taste für Aktionen\n\n
+        Kapitelnavigation mittels Track-ball,
+        D-pad oder durch Wischen</string>
   <string name="help_nav_title">Navigation</string>
-  <string name="help_nav_text">Mit dem Finger wischen, um zwischen Kapiteln zu navigieren. Einmal auf den Bibeltext tippen, um den Vollbildmodus an- und auszuschalten. Bibelmodule haben oben rechts ein Menü, und das Fenstermenü kann über längeres Drücken aktiviert werden.</string>
+  <string name="help_nav_text">Kapitelnavigation durch Wischen mit dem Finger.
+        Doppeltippen des Bibeltextes schaltet den Vollbildschirmmodus an/aus.
+        Bibelfensterhaben eine Menütaste oben rechts; 
+        durch langes Drücken wird das Fenstermenü aktiviert.
+    </string>
   <string name="help_speech_title">Sprache</string>
   <string name="help_speech_text">\"Sprache\" antippen, um den Steuerungsdialog aufzurufen</string>
   <string name="help_mynote_title">Eigene Notiz</string>
@@ -73,7 +79,7 @@ Ein langer Druck auf den Retourknopf öffnet die Chronik.
   <string name="prefs_default_bookmark_style_summary">Farbe oder Symbol für Hervorhebung</string>
   <string name="prefs_show_mynotes_title">Eigene Notizen</string>
   <string name="prefs_show_notes_title">Fußnoten &amp; Querverweise</string>
-  <string name="prefs_show_strongs_title">Konkordanz anzeigen</string>
+  <string name="prefs_show_strongs_title">Strong\'s numbers</string>
   <string name="prefs_show_morphology_title">Morphologie anzeigen</string>
   <string name="prefs_section_title_title">Überschriften</string>
   <string name="prefs_red_letter_title">Jesu Worte markieren</string>
@@ -100,6 +106,12 @@ Ein langer Druck auf den Retourknopf öffnet die Chronik.
   <string name="prefs_split_mode_title">Geteilter Modus</string>
   <string name="prefs_request_sdcard_permission_title">Es gibt händisch installierte Dokumente</string>
   <string name="prefs_request_sdcard_permission_summary">Die Verwendung von eigenhändig im Ordner jsword auf der SD-Karte installierten Dokumenten  aktivieren</string>
+  <string name="bible_text_options">Bibeltextoptionen</string>
+  <string name="auto_fullscreen">Vollbildschirmmodus durch Scrollen</string>
+  <string name="switch_split_mode">Fenstermodus wechseln</string>
+  <string name="reversed_split_mode">Umgedrehter Fenstermodus</string>
+  <string name="prefs_auto_night_mode_title">Automatischer Nachtmodus</string>
+  <string name="prefs_auto_night_mode_summary">Nachtmodus automatisch de-/aktivieren</string>
   <!--Window-->
   <string name="new_window">Neues Fenster</string>
   <string name="windowClose">Schließen</string>
@@ -279,6 +291,8 @@ Ein langer Druck auf den Retourknopf öffnet die Chronik.
   <string name="speak_third">Drittes</string>
   <string name="speak_fourth">Viertes</string>
   <string name="speak_fifth">Fünftes</string>
+  <string name="verse_range_mode_disabled">
+Der Wiederholungsmodus wurde automatisch deaktivert, da das Vorlesen außerhalb der markierten Verse gestartet wurde.</string>
   <!--User Notes-->
   <string name="mynotes">Eigene Notizen</string>
   <string name="mynote_add">Notiz hinzufügen</string>
