--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -4,10 +4,12 @@
   <!--Startup & Help-->
   <string name="splash_top_text">
 \n\"In Bog je rekel: \'Naj bo svetloba;\' in bila je svetloba.\"\nGeneza 1:3</string>
-  <string name="help_text">Za aktiviranje pritisni tipko MENU\n\nNa naslednje ali prejšnje poglavje se pride z uporabo sledilne kroglice, trackpada ali pomikom prsta preko ekrana</string>
+  <string name="help_text">Za aktiviranje pritisni tipko MENU\n\n
+        Na naslednje ali prejšnje poglavje se pride z uporabo sledilne kroglice, 
+trackpada ali pomikom prsta preko ekrana</string>
   <string name="help_nav_title">Krmarjenje</string>
   <string name="help_nav_text">Na naslednje ali prejšnje poglavje pojdi tako, da s prstom podrsaš po ekranu.
-        Dvojni pritisk na biblično besedilo preklopi v celozaslonski način. Okna biblij imajo meni v zgornjem desnem kotu ekrana
+        Dvojni pritisk na biblično besedilo preklopi v celozaslonski način. Okna biblij imajo meni v zgornjem desnem kotu ekrana,
         in do menija okna se dostopa z daljšim pritiskom nanj.
     </string>
   <string name="help_speech_title">Govor</string>
@@ -82,7 +84,7 @@
   <string name="prefs_default_bookmark_style_summary">Poudari barvo ali ikono</string>
   <string name="prefs_show_mynotes_title">Prikaži ikone mojih opomb</string>
   <string name="prefs_show_notes_title">Zaznamki in sklici</string>
-  <string name="prefs_show_strongs_title">Prikaži Strong-ova števila</string>
+  <string name="prefs_show_strongs_title">Strong-ova števila</string>
   <string name="prefs_show_morphology_title">Oblikoslovne kode</string>
   <string name="prefs_section_title_title">Naslovi poglavij</string>
   <string name="prefs_red_letter_title">Rdeče črke</string>
@@ -109,6 +111,12 @@
   <string name="prefs_split_mode_title">Način delitve</string>
   <string name="prefs_request_sdcard_permission_title">Obstajajo ročno nameščeni dokumenti</string>
   <string name="prefs_request_sdcard_permission_summary">Omogoči uporabo ročno nameščenih dokumentov iz jsword mape na SD kartici</string>
+  <string name="bible_text_options">Opcije bibličnega besedila</string>
+  <string name="auto_fullscreen">Celoten ekran s premikanjem</string>
+  <string name="switch_split_mode">Preklopi v način delitve</string>
+  <string name="reversed_split_mode">Obrnjen način delitve</string>
+  <string name="prefs_auto_night_mode_title">Avtomatični nočni način</string>
+  <string name="prefs_auto_night_mode_summary">V nočni način avtomatično preklopi s senzorjem</string>
   <!--Window-->
   <string name="new_window">Novo okno</string>
   <string name="windowClose">Zapri</string>
@@ -302,6 +310,10 @@ poglavij, toda Rimljane počasneje z zvoki ob spremembah poglavja, potem
   <string name="speak_third">Tretji</string>
   <string name="speak_fourth">Četrti</string>
   <string name="speak_fifth">Peti</string>
+  <string name="verse_range_mode_disabled">
+        Način ponovitve vrstice je bil avtomatično onemogočen, ker
+        je bil govor začet izven določenega območja vrstic.
+    </string>
   <!--User Notes-->
   <string name="mynotes">Moje opombe</string>
   <string name="mynote_add">Dodaj Mojo opombo</string>
